<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MainActivity</string>
    <string name="hello">Happy Birthday!</string>
    <string name="lk">Your best friend</string>
    <string name="app_ball_name">ball</string>
    <string name="action_card_settings">settings</string>
    <string name="action_ball_settings">Settings</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add3">+3 points</string>
    <string name="lable_add2">+2 points</string>
    <string name="title_activity_ball">ball</string>
    <string name="reset">Reset</string>
    <string name="score_a_0">0</string>
    <string name="team_b">Team B</string>
    <string name="score_b_0">0</string>
    <string name="team_a">Team A</string>
    <string name="title_activity_rate">RateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>